# ndk-essentia-test

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/glion/ndk_essentia_test/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/glion/ndk_essentia_test/embedding/: EmbeddingJniTest.kt  GetFeatureJniTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  inference-jni-bridge.cpp
app/src/main/cpp/include/essentia/: version.h
app/src/main/cpp/inference/: embedding_helper.cpp  embedding_helper.h
app/src/main/cpp/inference/common/: audio_data.h  cal_runtime.h  log_util.h
app/src/main/cpp/inference/feature/: extract_chroma.cpp  extract_features.cpp  extract_logmel.cpp  extract_tempo.cpp
app/src/main/cpp/inference/load/: audio_loader.cpp  audio_perform_hpss.cpp  audio_segmenter.cpp
app/src/main/cpp/inference/onnx/: inference.cpp  l2normalize.cpp  make_tensor.cpp  mean_pooling.cpp
app/src/main/cpp/inference/struct/: embedding_config.h
app/src/main/cpp/inference/test/: flatten_feature.cpp
app/src/main/java/com/glion/ndk_essentia_test/: InferenceJniBridge.kt  MainActivity.kt  NetworkObject.kt  Service.kt
app/src/main/java/com/glion/ndk_essentia_test/dto/: BaseResponse.kt  CosineSimilarityRequest.kt  EmbeddingError.kt  EmbeddingRequest.kt  SimilarityResult.kt
app/src/main/java/com/glion/ndk_essentia_test/interceptor/: LogInterceptor.kt  PrettyJsonLogger.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/glion/ndk_essentia_test/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
